# tcp_server_market

./: .gitignore  CMakeLists.txt  README.md  configurary.sh  market.dump
client/: CMakeLists.txt
client/forms/: deletedialog.ui  logindialog.ui  mainwindow.ui  registrationdialog.ui
client/include/: Authorizator.h  Requester.h  commonflags.h  deletedialog.h  logindialog.h  mainwindow.h  registrationdialog.h
client/src/: Authorizator.cpp  CMakeLists.txt  Requester.cpp  deletedialog.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  registrationdialog.cpp
include/: Common.hpp  DataBase.h  ServerConfig.h
include/client/: ActiveOrdersProcessor.h  BalanceProcessor.h  DealsProcessor.h  DeleteProcessor.h  EventProcessorFactory.h  ExitProcessor.h  ForGuiDeleteProcessor.h  ForGuiLoginProcessor.h  ForGuiOrderProcessor.h  ForGuiRegistrationProcessor.h  HelloProcessor.h  HistoryProcessor.h  LoginProcessor.h  MakeOrderProcessor.h  Processor.h  ProcessorCreator.h  QuotationProcessor.h  RegistrationProcessor.h
include/handlers/: ActiveOrdersHandler.h  BalanceHandler.h  DealsHandler.h  DeleteHandler.h  HandlerCreator.h  HandlerFactory.h  HelloHandler.h  HistoryHandler.h  OrderHandler.h  QuotationsHandler.h  RegisterHandler.h  RequestHandler.h  SignInHandler.h  TemplateHandlerCreator.h  abstract_handler.h
include/matchengine/: Engine.h
include/postgres/: PGConnection.h  PGConnectionPool.h
src/: CMakeLists.txt  Client.cpp  DataBase.cpp  RegisterHandler.cpp  Server.cpp
src/client/: ActiveOrdersProcessor.cpp  BalanceProcessor.cpp  CMakeLists.txt  DealsProcessor.cpp  DeleteProcessor.cpp  EventProcessorFactory.cpp  ExitProcessor.cpp  ForGuiDeleteProcessor.cpp  ForGuiLoginProcessor.cpp  ForGuiOrderProcessor.cpp  ForGuiRegistrationProcessor.cpp  HelloProcessor.cpp  HistoryProcessor.cpp  LoginProcessor.cpp  MakeOrderProcessor.cpp  QuotationProcessor.cpp  RegistrationProcessor.cpp  client.cpp
src/handlers/: ActiveOrdersHandler.cpp  BalanceHandler.cpp  CMakeLists.txt  DealsHandler.cpp  DeleteHandler.cpp  HelloHandler.cpp  HistoryHandler.cpp  OrderHandler.cpp  QuotationsHandler.cpp  RegisterHandler.cpp  SignInHandler.cpp
src/matchengine/: CMakeLists.txt  Engine.cpp
src/postgres/: CMakeLists.txt  PGConnection.cpp  PGConnectionPool.cpp
tests/: CMakeLists.txt  tests.cpp
